	  added path for "foomatic-rip" and for PPR daemon
	  ("foomatic-configure" needs the daemon to check the PPR version).

	  Insert absolute paths for the database location ($libdir) in the
	  "inplace" installation.

	* lib/Foomatic/DB.pm: Improved header text of the PPD files:
	  GPL, Foomatic 2.9 URL, "foomatic-rip", download instructions.
	
	* foomatic-configure.in: Used path from Defaults.pm for calls of
	  "foomatic-rip" when generating PDQ driver files.

	* foomatic-addpjloptions.8.in: Updated path in "FILES" section.

	* README, USAGE, TODO: Updated pacckage documentation for the
	  Foomatic 2.9.0 release.

	* etc/printcap: Removed this file, it is not needed for the
	  package.
	
2002-11-27  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Removed the generator functions for the
	  old Perly Foomatic 2.0 PPDs, old-style CUPS PPDs, lpdomatic/
	  directomatic printer description files, PDQ driver files,
	  and MagicFilter printer definition files.

	  Added functions to parse the new Perl-free Foomatic 2.9 PPD
	  files, to read out and update the option defaults and the
	  postpipe.

	  In the "Execution Details" web page generation taken into
	  account that foomatic-rip now allows the same spot letter ("%A",
	  "%B", ...) being more than once in the prototype so that option
	  settings can act on several points of the command line.

	* lib/Foomatic/GrovePath.pm: Removed because it is not needed any
	  more.

	* foomatic-configure.in: Adapted to the new concept of
	  foomatic-rip and PPD files. Removed the generation of combo XML
	  files in /etc/foomatic/.

	* foomatic-compiledb.in: Removed support for all output file types
	  except PPD and XML.

	* foomatic-datafile.in, foomatic-datafile.1.in: Removed, we have
	  foomatic-ppdfile as replacement.

	* foomatic-ppdfile.in, foomatic-ppdfile.1.in: Replacement for
	  foomatic-datafile, produces only PPD files, no other file types

	* foomatic-compiledb.1.in, foomatic-configure.1.in: Updated man